<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hey guys this is TourApp</string>
    <string name="app_name">TourApp</string>
    <string name="MenuOne"></string>
    <string name="MenuTwo"></string>
    <string name="MenuThree"></string>
    <string name="MenuFour"></string>
    <string name="MenuFive"></string>
    <string name="Fav">Favoris</string>
    <string name="Det">Description</string>
    <string name="Msg">Message</string>
    <string name="Settings">Paramètres</string>
    <string name="Search">Recherche</string>
    <string name="ChoixTheme">Choisissez un theme</string>
    <string name="ChoixVille">Choisissez une zone</string>
    <string name="MotClefs">mot clef</string>
    <string name="LaunchSearch">Lancer la recherche</string>
	<string name="Sent">Votre avis a été envoyé</string>
    <string name="NotSent">Erreur ! Verifiez votre connexion internet !</string>
    <string name="Data">Les champs sont obligatoires</string>
    <string name="Types">Thèmes</string>
    <string name="item">item(s)</string>
    <string name="FavBut">Favoris</string>
    <string name="SiteBut">WebSite</string>
    <string name="CallBut">Appeler</string>
    <string name="MapBut">Carte</string>
    <string name="TMTOne">Morning 8am-12pm</string>
    <string name="TMTTwo">After noon 2pm-6-pm</string>
    <string name="TMTThree">Evening 8pm-2am</string>
    <string name="Message">Message</string>
    <string name="SettingsOne">Choisir la ville</string>
    <string name="SettingsTwo">Choisir la langue</string>
    <string name="SettingsThree">Donnez votre avis</string>
    <string name="SettingsFour">Valider</string>
    <string name="SettingsFive">Envoyer</string>
    <string name="HomeActivityTitle">TechnoTalkative | Dashboard pattern example</string>
    <string name="FeedbackActivityTitle">Feedback</string>
    <string name="EclairActivityTitle">Eclair 2.0/2.1</string>
    <string name="FroyoActivityTitle">Froyo 2.2</string>
    <string name="GingerbreadActivityTitle">Gingerbread 2.3.x</string>
    <string name="HoneycombActivityTitle">Honeycomb 3.x.x</string>
    <string name="ICSActivityTitle">ICS 4.0.x</string>
    <string name="JellyBeanActivityTitle">JellyBean (May be 4.1)</string>
	<string name="title_activity_search">SearchActivity</string>
    <string name="btnvp">Voir plus</string>
    <string name="title_activity_maps_photo_details">MapsPhotoDetailsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="btnOk">OK</string>
	<string name="rechercher">Rechercher</string>
    
    <string name="active">Activé</string>
    <string name="desactive">Desactivé</string>
    <string name="coordonnees">Coordonnées(adresse)</string>
    <string name="equipements">Equipements et services</string>
    <string name="informations">Informations pratiques</string>
    <string name="btnWiki">Wikipedia</string>
    <string name="btnStrvw">Street View</string>
    <string name="btnNav">Navigation</string>
    <string name="btNav">Navigation</string>
    <string name="btWiki">Wikipedia</string>
    <string name="btStrvw">StreetView</string>

</resources>