<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
	
    <ViewStub android:id="@+id/vsHeader" 
		    android:inflatedId="@+id/header" 
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content" 
			android:layout="@layout/header" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TMTOne"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent">"

            <ImageButton
                android:id="@+id/morningButton"
                android:layout_width="60dp"
                android:layout_height="60dp" />

            <TextView
                android:id="@+id/textMorning"
                android:layout_width="250dip"
                android:layout_height="wrap_content"
                android:text="De 8h du matin jusqu'à midi vous pouvez aller voir le chateu des ducs de Bretagne" />

        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TMTTwo"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <ImageButton
                android:id="@+id/afterButton"
                android:layout_width="60dp"
                android:layout_height="60dp" />

            <TextView
                android:id="@+id/textAfter"
                android:layout_width="250dip"
                android:layout_height="wrap_content"
                android:text="Depuis 14h jusqu'à 18h vous pouvez manger dans le cenreville, puis aller vers saint mihiel pour rester au bord de l'Erdre." />

        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TMTThree"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <ImageButton
                android:id="@+id/nightButton"
                android:layout_width="60dp"
                android:layout_height="60dp" />

            <TextView
                android:id="@+id/textNight"
                android:layout_width="250dip"
                android:layout_height="wrap_content"
                android:text="Depuis 20h jusqu'à 23h vous pouvez rester dans un bar comme coté plage et puis vous pouvez aller dans une boite" />

        </TableRow>
    </TableLayout>

</LinearLayout>